# Polarity-

./: .gitignore  CMakeDeps.cmake  CMakeLists.txt  README.md  currentIssues.html
includes/: afinn.h  emotions.h  opencv.hpp  rppg.h
includes/data/: AFINN.txt
installers/: armadillo.ps1  armadillo.sh  opencv.ps1  opencv.sh  opencv_stage1.ps1  opencv_stage2.ps1  opencv_stage3.ps1  scratch.ps1
src/: main.cpp
src/backends/: decisiontree.hpp  regression.hpp
src/backends/converter/: matrix.hpp
src/backends/gameplay/: gameplay.hpp
src/backends/gameplay/movements/: moves.hpp
src/backends/gameplay/movements/tactics/: collector.hpp
src/backends/patterns/: patterns.hpp
src/backends/patterns/psyche/: emovaluation.hpp
src/backends/rnn/: behave_rnn.hpp  rnn.hpp  utils.h
src/backends/rnn/activation/: activation.hpp
src/backends/rnn/eval/: checker.hpp  progress.hpp
src/backends/rnn/trainer/: trainer.hpp
src/handlers/: handlers.hpp
src/handlers/emotions/: ned.hpp
src/handlers/heartrate/: rppg.hpp
src/handlers/text/: afinn.hpp
src/handlers/voice/: common-sdl.cpp  common-sdl.h  whisper.hpp
src/tools/: image_smoothing.hpp  motion_blur.hpp
tests/: heart.cpp
